--- a/src/layouts/less/variable.less
+++ b/src/layouts/less/variable.less
@@ -3,6 +3,13 @@
 
 // 重置iconfont为本地地址
 //@icon-url: "~/font/iconfont";
+//基本颜色
+@gray: #d9d9d9;
+@white: #ffffff;
+@blue: #108ee9;
+@yellow: #f56a00;
+@green: #3dbd7d;
+@red: #f46e65;
 
 // 重置基础字体大小
 @font-size-base: 12px;
