--- a/src/components/FDInput/style.less
+++ b/src/components/FDInput/style.less
@@ -56,11 +56,14 @@
   }
 
   .mail-code-error {
-    right: 12px;
+    right: 120px;
   }
 }
 
 .img-code {
+  height: 0;
+  border-bottom: none;
+  transition: height .5s;
 
   input {
     width: 180px;
