--- a/src/containers/Frame/Header/style.less
+++ b/src/containers/Frame/Header/style.less
@@ -7,7 +7,7 @@ header {
   right: 0;
   z-index: 999;
   height: 50px;
-  background-color: @white;
+  background-color: rgba(255,255,255,0.1);
   box-shadow: 0 3px 4px #ccc;
 }
 
