--- a/src/containers/Frame/Header/style.less
+++ b/src/containers/Frame/Header/style.less
@@ -7,7 +7,7 @@ header {
   right: 0;
   z-index: 999;
   height: 50px;
-  background-color: rgba(255,255,255,0.1);
+  background-color: @white;
   box-shadow: 0 3px 4px #ccc;
 }
 
@@ -25,10 +25,10 @@ header {
   font-weight: bold;
   margin-top: 6px;
   span {
-    display: inline-block;
-    margin-right: 2px;
     position: relative;
     top: 0;
+    display: inline-block;
+    margin-right: 2px;
   }
 
   span:nth-child(1) {
@@ -53,24 +53,20 @@ header {
 }
 
 .search {
-  padding-top: 10px;
-
-  .searchbar, button {
-    height: 30px;
-  }
-
-  .searchbar {
+  padding-top: 16px;
+  span {
     padding: 7px;
     border: 1px solid #bfbfbf;
     border-radius: 3px;
-
+    background-color: @white;
+    box-shadow: 1px 3px 3px #dadada inset;
     input {
-      width: 240px;
+      width: 200px;
       transition: all .3s;
       border: none;
       outline: none;
       &:focus {
-        width: 320px;
+        width: 86%;
       }
     }
 
@@ -79,11 +75,5 @@ header {
       font-weight: bold;
       cursor: pointer;
     }
-  }
-
-  button {
-    margin-left: 10px;
-    font-size: 12px;
-    transition: all .3s;
   }
 }
