--- a/src/layouts/less/reset.less
+++ b/src/layouts/less/reset.less
@@ -32,11 +32,6 @@
   color: #3dbd7d;
 }
 
-
-body {
-  min-height: 100%;
-
-}
 .content {
   margin-top: 50px;
 }
@@ -50,12 +45,25 @@ body {
 }
 
 .container {
-  max-width: 1300px;
   margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (max-width: 1500px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .container {
+    width: 1400px;
+  }
 }
 
 .reset {
-  min-width: 1220px;
+  width: 100%;
 
   a {
     &:focus {
@@ -68,17 +76,4 @@ body {
     &:active {text-decoration: none;}
   }
 
-  .ps-container > .ps-scrollbar-x-rail > .ps-scrollbar-x,
-  .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {
-    background-color: #333;
-  }
-
-  .rdtPicker {
-    margin-top: 6px;
-  }
-
-  .ant-dropdown-menu-sub {
-    max-height: 100px;
-    overflow-y: auto;
-  }
 }
