--- a/src/containers/Frame/Header/Status/style.less
+++ b/src/containers/Frame/Header/Status/style.less
@@ -12,10 +12,15 @@
 }
 
 
+.LoginStatus {
+  text-align: right;
+}
+
 .icon {
   display: inline-block;
   font-size: 14px;
-  padding:10px 30px 0 30px;
+  padding:10px 10px 0 10px;
+  margin-left: 10px;
   vertical-align: middle;
   cursor: pointer;
   color: @blue;
