--- a/src/layouts/less/variable.less
+++ b/src/layouts/less/variable.less
@@ -1,15 +1,21 @@
+@import '../iconfont/iconfont.less';
+
 // 引入antd的样式
 @import '~antd/lib/style/themes/default.less';
 
 // 重置iconfont为本地地址
 //@icon-url: "~/font/iconfont";
 //基本颜色
+@grayWhite: #f7f7f7;
+@grayDark: #8590a6;
+@hoverColor: #ecf6fd;
 @gray: #d9d9d9;
 @white: #ffffff;
 @blue: #108ee9;
 @yellow: #f56a00;
 @green: #3dbd7d;
-@red: #f46e65;
+@red: #d73435;
+@dark: #404040;
 
 // 重置基础字体大小
 @font-size-base: 12px;
