--- a/src/layouts/less/reset.less
+++ b/src/layouts/less/reset.less
@@ -8,12 +8,32 @@
 }
 
 // 全局重置样式
+body {
+  overflow-x: hidden;
+  background-color: #f5f5f5;
+}
+#root {
+  padding-bottom: 100px;
+
+}
+.clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
 .gray {
-  color: #d9d9d9;
+  color: @gray;
 }
 
 .white {
-  color: #ffffff;
+  color: @white;
 }
 
 .blue {
@@ -21,7 +41,21 @@
 }
 
 .red {
-  color: #f46e65;
+  color: @red !important;
+}
+
+.background-red {
+  background-color: #f46e65;
+}
+
+.background-white {
+  background-color: #f7f7f7;
+}
+
+.background-hover {
+  &:hover {
+    background-color: @hoverColor;
+  }
 }
 
 .yellow {
@@ -50,30 +84,29 @@
   padding-right: 20px;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 1400px) {
   .container {
-    width: 1170px;
+    width: 1000px;
   }
 }
 
-@media (min-width: 1500px) {
+@media (min-width: 1400px) {
   .container {
-    width: 1400px;
+    width: 1100px;
   }
 }
 
 .reset {
   width: 100%;
+}
 
-  a {
-    &:focus {
-      outline: none;
-    }
-    user-select: none;
-    &:link {text-decoration: none;}
-    &:visited {text-decoration: none;}
-    &:hover {text-decoration: none;}
-    &:active {text-decoration: none;}
+a {
+  &:focus {
+    outline: none;
   }
-
+  user-select: none;
+  &:link {text-decoration: none;}
+  &:visited {text-decoration: none;}
+  &:hover {text-decoration: none;}
+  &:active {text-decoration: none;}
 }
