--- a/src/containers/Frame/Header/Status/style.less
+++ b/src/containers/Frame/Header/Status/style.less
@@ -3,8 +3,13 @@
 
 .loginIcon {
   font-size: 15px;
-  margin-left: 300px;
+  margin-left: 100px;
   line-height: 50px;
+
+  & > a {
+    margin-left: 30px;
+  }
+
   i {
     margin-right: 2px;
     font-weight: bold;
