--- a/src/containers/User/Info/style.less
+++ b/src/containers/User/Info/style.less
@@ -1,6 +1,7 @@
 @import '../../../layouts/less/variable.less';
 
 .info {
+  min-height: 600px;
   margin-right: 10px;
   margin-top: 10px;
   padding: 20px;
@@ -15,7 +16,9 @@
   }
 }
 
-.student {
+
+.text {
+  position: relative;
   padding-left: 20px;
   padding-right: 20px;
 }
