--- a/src/containers/Login/style.less
+++ b/src/containers/Login/style.less
@@ -8,13 +8,7 @@
   top: 50px;
   bottom: 0;
 
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
+  
 }
 
 .loginIn,
@@ -55,7 +49,7 @@
 
 
     & > div {
-
+    transition: all .3s;
       &:last-child {
         border: none;
       }
@@ -78,6 +72,9 @@
   }
 }
 
+.changePW {
+  padding-bottom: 30px;
+}
 
 .register {
 
@@ -90,25 +87,5 @@
     }
   }
 
-  .role {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid @gray + #111;
 
-    & > div {
-      width: 100%;
-      border: none;
-    }
-
-    label {
-      width: 50%;
-      margin: 0;
-      text-align: center;
-
-      &:first-child {
-        border-right: 1px solid @gray + #111;
-      }
-    }
-
-  }
 }
