--- a/src/components/FDSkills/style.less
+++ b/src/components/FDSkills/style.less
@@ -6,11 +6,11 @@
   position: relative;
   display: inline-block;
   user-select: none;
-  height: 78px;
-  
+  height: 74px;
+
   & > .show {
     width: 100%;
-    height: 78px;
+    height: 74px;
     border: 1px solid @gray;
     border-radius: 4px;
     padding: 0 4px 4px 4px;
@@ -23,7 +23,7 @@
         border-radius: 4px;
         font-size: 10px;
         background-color: @grayWhite;
-
+        margin-top: 4px;
         & > i {
           display: inline-block;
           font-size: 12px;
