--- a/src/containers/User/Info/item/style.less
+++ b/src/containers/User/Info/item/style.less
@@ -5,76 +5,24 @@
 
   border-bottom: 1px solid @gray;
 
-  & > span {
-    display: inline-block;
-    vertical-align: text-top;
-    width: 120px;
-    font-size: 16px;
-    font-weight: bold;
-    color: @dark;
-  }
-
-  & > input,textarea {
-    outline: none;
-    border: 1px solid @gray;
-    border-radius: 4px;
-    line-height: 20px;
-  }
 }
 
 .name {
   & > span {
     font-size: 24px;
+    font-weight: bold;
+    padding-left: 40px;
     color: @grayDark;
   }
 }
 
-.name,
-.qq {
-  & > input {
-    width: 300px;
-    padding: 5px;
-  }
-}
 
-.experience,
-.selfFeel {
-  & > span {
-    vertical-align: top;
-  }
-
-  & > textarea {
-    width: 400px;
-    padding: 5px;
-  }
-}
-
-
-.sex {
-  label {
-    font-size: 14px;
-
-    & > span:last-child {
-      vertical-align: -2px;
-    }
-  }
-}
-
-.university,
-.academy,
-.edu,
-.major {
-  & > div {
-    width: 160px !important;
-    font-size: 12px;
-  }
-}
 
 .submit {
   border: none;
   text-align: right;
   & > button {
     padding: 2px 30px;
-    margin-right: 20px;
+    margin-right: 4px;
   }
 }
