--- a/src/containers/User/ReleaseChange/style.less
+++ b/src/containers/User/ReleaseChange/style.less
@@ -13,6 +13,7 @@
 .submit {
   border: none;
   text-align: right;
+  margin-top: 40px;
   & > button {
     padding: 2px 30px;
     margin-right: 4px;
