--- a/src/containers/Details/style.less
+++ b/src/containers/Details/style.less
@@ -32,6 +32,8 @@
   padding-top: 16px;
   h3 {
     font-size: 20px;
+    text-align: right;
+    padding-right: 30px;
   }
   p {
     padding-right: 10px;
@@ -40,9 +42,10 @@
     font-size: 16px;
     > span {
       display: inline-block;
+      margin-top: 4px;
       padding-top: 10px;
       user-select: none;
-      padding: 4px 14px;
+      padding: 2px 14px;
       background-color: @hoverColor;
       font-size: 14px;
       border-radius: 3px;
