--- a/src/layouts/less/reset.less
+++ b/src/layouts/less/reset.less
@@ -58,9 +58,13 @@ body {
   background-color: #f7f7f7;
 }
 
+.background-select {
+  background-color: @hoverColor;
+}
+
 .background-hover {
   &:hover {
-    background-color: @hoverColor;
+    background-color: @hoverColor !important;
   }
 }
 
