--- a/src/components/FDImageEditor/style.less
+++ b/src/components/FDImageEditor/style.less
@@ -138,3 +138,14 @@
     }
   }
 }
+
+.@{prefix}-hover {
+  .mask, .text {
+    display: none;
+  }
+  &:hover {
+    .mask, .text {
+      display: block;
+    }
+  }
+}
